--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,7 @@
 {
+    "functions": {
+    "source": "pd-website-react-app/functions"
+  },
   "hosting": {
     "public": "pd-website-react-app/dist",
     "ignore": [
@@ -13,9 +16,24 @@
       }
     ]
   },
+  "firestore": {
+    "rules": "firestore.rules"
+  },
+  "storage": {
+    "rules": "storage.rules"
+  },
   "emulators": {
     "hosting": {
       "port": 5033
+    },
+        "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "storage": {
+      "port": 9199
     },
     "ui": {
       "enabled": true
