--- a/pd-website-react-app/firebase.json
+++ b/pd-website-react-app/firebase.json
@@ -1,9 +1,9 @@
 {
-    "functions": {
-    "source": "pd-website-react-app/functions"
+  "functions": {
+    "source": "functions"
   },
   "hosting": {
-    "public": "pd-website-react-app/dist",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -19,21 +19,15 @@
   "firestore": {
     "rules": "firestore.rules"
   },
-  "storage": {
-    "rules": "storage.rules"
-  },
   "emulators": {
     "hosting": {
       "port": 5033
     },
-        "functions": {
+    "functions": {
       "port": 5001
     },
     "firestore": {
       "port": 8080
-    },
-    "storage": {
-      "port": 9199
     },
     "ui": {
       "enabled": true
