--- a/pd-website-react-app/functions/package.json
+++ b/pd-website-react-app/functions/package.json
@@ -14,10 +14,8 @@
   },
   "main": "index.js",
   "dependencies": {
-    "cors": "^2.8.5",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
-    "nodemailer": "^7.0.3"
+    "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
